# NeuroForge

./: .gitignore  CITATION.cff  CMakeLists.txt  GOVERNANCE.md  LICENSE  LICENSE.md  README.md
.jules/: sentinel.md
Artifacts/RWCI_Canonical_Run/: INDEX.md
docs/: API_Reference_Enhanced.md  APPLICATIONS.md  Acoustic_Language_System_Breakthrough.md  AutonomousScheduler_API.md  BOUNDARIES.md  Babbling_Stage_Implementation_Guide.md  Benchmarking.md  Biases_Calibration_and_Ethics.md  Build_Instructions_v2.md  CUDAAccel_API.md  Codebase_Analysis.md  Comprehensive_Technical_Report.md  Configuration_Parameters_Reference.md  Conversation.txt  Demo.html  Developmental_Milestone_Tracking.md  Developmental_Tracking_System_Documentation.md  EXPERIMENT_GUIDE.md  GPU_ACCELERATION.md  HOWTO-dashboard.md  HOWTO.md  HowToDemo_M1-M4.md  IMPLEMENTATION_VERIFICATION_REPORT.md  Language_System_API_Reference.md  Language_System_Integration_Guide.md  Language_System_Troubleshooting.md  M7_AUTONOMY_DOCUMENTATION.md  MemoryDB_Schema_Reference.md  Neurons_Synapses_Regions_API.md  PHASE2_INTEGRATION_GUIDE.md  Phase15_Behavioral_Trends.md  Phase15_Behavioral_Trends_Appendix.md  Phase15_Behavioral_Trends_Table.md  Phase17_Experiment_Design.md  Phase5_Language_Learning.md  Phase5_Language_Mapping_Integration.md  Phase6-9_Integration_Spec.md  README_SYSTEM.md  REGRESSION_RUN.md  Research_Applications_Guide.md  (+17 more)
docs/00_README_ROOT/: CORE_PRINCIPLES.md  GLOSSARY.md  HOW_TO_READ_THIS.md  INDEX.md  README.md  WHY_NOT_LLM.md
docs/01_FOUNDATION/: DESIGN_PRINCIPLES.md  INDEX.md  PHILOSOPHY.md
docs/02_ARCHITECTURE/: ARCHITECTURE.md  INDEX.md  Neural_Substrate_Migration_Guide.md
docs/Archival/: ARCHIVAL_SYSTEM_REPORT.md  BIAS_SYSTEMS_ANALYSIS.md  CHANGELOG.md  COMPLETE_COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  Conversation_with_GPT5.2.md  EXECUTIVE_SUMMARY.md  LARGE_SCALE_SIMULATION_REPORT.md  LICENSE_ADDENDUM.md  MASSIVE_SCALE_2M_SIMULATION_REPORT.md  MIGRATION_VALIDATION_REPORT.md  NEURAL_SUBSTRATE_MIGRATION_COMPLETION_REPORT.md  NEURAL_SUBSTRATE_MIGRATION_FINAL_SUMMARY.md  NEUROFORGE_COMPREHENSIVE_ANALYSIS_REPORT.md  NeuroForge_Professional_Teaser.md  OPTIMIZATION_REPORT.md  PERFORMANCE_VALIDATION_REPORT.md  TECHNICAL_WHITEPAPER.md  UNIFIED_QUALITY_ANALYSIS_REPORT.md  VALIDATION_REPORT_GENERATED.md  live_summary.md  production_report.md
docs/Codebase_Analysis/: Critical_Evaluation.md  System_Architecture_Integration.md  deep_analysis_report_doc.md  project_conclusion.md
docs/documentation/: README.md  (+3 more)
schemas/: brainstate.capnp  neuroforge.capnp
scripts/: CMakeLists.txt  NeuroForge_Learning_Analysis.py  README.md  TripletDatasetLoader.py  Visual.py  _tmp_hysteresis_summary.py  ablation_runner.py  ads2_run.ps1  analyze_2m_assemblies.py  analyze_assemblies.py  analyze_autonomy_envelope.py  analyze_autonomy_modulation.py  analyze_ethics.py  analyze_gate.py  analyze_memdb.py  analyze_phase_c_wm.py  analyze_stochastic_scaling.py  analyze_stochastic_surface.py  analyze_synapses_phase_a.py  assembly_analysis_simulation.py  assembly_detector.py  basic_scaling_test.ps1  benchmark_2m_neurons.ps1  benchmark_performance.cpp  benchmark_runner.ps1  benchmark_unified.py  build_stochastic_response.py  check_phase_a.py  check_telemetry_integrity.py  ci_export.ps1  collect_sys_stats.py  compile_papers.ps1  create_visualizations.py  dev_probe_views.py  direction_a_runner.py  direction_a_train.py  dump_metacognition.py  dump_motivation_state.py  encoders_clip.py  evaluate_embeddings.py  (+61 more)
src/: audio_capture.cpp  audio_capture.h  main.cpp  phase5_language_demo.cpp  phase5_minimal_test.cpp  phase_a_demo.cpp  phase_c_runner.cpp  production_substrate_deployment.cpp  screen_capture.h  simple_social_demo.cpp  social_perception_demo.cpp  system_audio_capture.cpp  system_audio_capture.h  test_acoustic_language.cpp  test_babbling_stage.cpp  test_babbling_stage_simple.cpp  test_developmental_tracking.cpp  test_encoders.cpp  test_language.cpp  test_learning.cpp  test_memorydb.cpp  test_neuron_scaling.cpp  test_phase2_integration.cpp  test_phase_a.cpp  test_speech_production.cpp  test_substrate_language_integration.cpp  test_survival_bias.cpp  test_unified_smoke.cpp  test_visual_language_integration.cpp  unified_substrate_demo.cpp  unified_training_demo.cpp
tests/: benchmark_goal_decay.cpp  benchmark_phase6_reasoner.cpp  benchmark_region_process.cpp  smoke_phase_a_dim_auto_audio.py  smoke_phase_a_dim_conflict.py  smoke_phase_a_dim_match_vision.py  smoke_phase_c.py  test_attachment_bias.cpp  test_attachment_bias_minimal.cpp  test_attachment_bias_simple.cpp  test_autonomous_scheduler.cpp  test_contrast_edge_bias.cpp  test_face_detection_bias.cpp  test_json_smoke.py  test_m6_acceptance.cpp  test_m6_simple.cpp  test_m7_acceptance.cpp  test_novelty_bias.cpp  test_phase15_shift.py  test_phase2_memory.cpp  test_planner_verify_flow.py  test_procedural_memory.cpp  test_region_optimization.cpp  test_social_perception.cpp  test_spatial_navigation_bias.cpp  test_substrate_mode.cpp  test_temporal_bias.cpp  test_validator_reward_modes.py  test_verify_map_param.py  test_verify_origin_reward_e2e.py  test_working_memory.cpp  unit_connectivity.cpp
tools/: aggregate_stage_summary.py  aggregate_sweep_results.py  analyze.py  db_export.py  db_repl.py  dump_affective_state.py  dump_goal_hierarchy.py  dump_intent_graph.py  dump_reflections.py  eval_triplet_grounding.py  export_autonomy_logs.py  export_context_peers.py  export_context_peers_compat.py  export_embeddings_rewards.py  export_onepager_pdf.ps1  export_reward_coupling.py  extract_transformer.py  generate_self_model_summary.py  generate_test_report_pdf.py  list_tables.py  make_phase5_demo.ps1  migrate_phase8_schema.py  phase6_trendline.py  phase7_ci_smoke.py  plot_phase6_curves.py  query_context_peers.py  run_ads1_long.ps1  stat_tests.py  summarize_autonomy_csv.py  summarize_csv.py  summarize_phase6_sweep.py  summarize_phasec_runner.py  summarize_series.py  teacher_62.txt  time_series_metrics.py  wait_and_summarize_phase6.ps1
(+218 files in other folders)
